--- a/style.css
+++ b/style.css
@@ -69,6 +69,13 @@ select:focus {
     outline: none;
 }
 
+/* 文件上传样式 */
+input[type="file"] {
+    display: block;
+    margin: 15px 0;
+    border: none;
+}
+
 /* 按钮样式 */
 button {
     background-color: #6e45e2;
@@ -92,8 +99,26 @@ button:active {
     transform: translateY(0);
 }
 
+/* 文件和文本分享的切换按钮 */
+.toggle-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.toggle-buttons button {
+    width: 48%;
+}
+
+button.active {
+    background-color: #4e34c9;
+}
+
+/* 分享码和文本展示卡片样式 */
 #code-card,
-#text-card {
+#text-card,
+#file-code-card,
+#file-card {
     margin-top: 20px;
     padding: 15px;
     background-color: #f5f5f5;
@@ -106,7 +131,10 @@ button:active {
     max-height: 300px; /* 设置默认高度 */
 }
 
-#copy-text-button {
+/* 复制按钮样式 */
+#copy-text-button,
+#copy-code-button,
+#copy-file-code-button {
     margin-top: 10px; /* 增加按钮和卡片之间的间距 */
 }
 
@@ -115,10 +143,12 @@ button:active {
 }
 
 /* 自定义时间选择 */
-#custom-expiration {
+#custom-expiration,
+#custom-expiration-file {
     margin-top: 10px;
 }
 
+/* 标签样式 */
 label {
     font-size: 14px;
     color: #888;
@@ -146,7 +176,8 @@ label {
     }
 
     #text-input,
-    #text-card {
+    #text-card,
+    #file-card {
         height: 400px; /* 增加输入和输出区域的默认高度 */
     }
 }
@@ -159,7 +190,8 @@ label {
     }
 
     #text-input,
-    #text-card {
+    #text-card,
+    #file-card {
         height: 200px; /* 设置较小的默认高度，便于适应小屏幕 */
     }
 }
@@ -168,9 +200,11 @@ label {
     .card {
         padding: 15px;
     }
+
     h1 {
         font-size: 22px;
     }
+
     textarea,
     input,
     select,
@@ -178,12 +212,17 @@ label {
         font-size: 14px;
         padding: 10px;
     }
+
+    .toggle-buttons button {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 350px) {
     h1 {
         font-size: 20px;
     }
+
     textarea,
     input,
     select,
@@ -191,35 +230,8 @@ label {
         font-size: 12px;
         padding: 8px;
     }
-}
-/* 切换按钮样式 */
-.toggle-buttons {
-    text-align: center;
-    margin: 20px;
-}
 
-.toggle-buttons button {
-    padding: 10px 20px;
-    font-size: 16px;
-    margin: 0 5px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    background-color: white;
-    color: #333;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.toggle-buttons button.active {
-    background-color: #6e45e2;
-    color: white;
-}
-
-.toggle-buttons button:hover {
-    background-color: #5638d7;
-}
-
-/* 隐藏元素 */
-.hidden {
-    display: none;
+    .toggle-buttons button {
+        font-size: 12px;
+    }
 }
